# mempal

./: AGENTS.md  CLAUDE.md  Cargo.toml
docs/: MIND-MODEL-DESIGN.md  MIND-MODEL-IMPLEMENTATION-ARTICLE.md  MIND-MODEL-IMPLEMENTATION-ARTICLE.zh-CN.md
docs/plans/: 2026-05-01-p52-phase-3-intake-roadmap.md  2026-05-02-p53-phase-3-candidate-evidence-audit.md  2026-05-02-p54-runtime-adoption-evidence.md  2026-05-02-p55-runtime-adoption-cli.md  2026-05-02-p56-card-context-default-gate.md  2026-05-02-p57-card-embedding-evidence-gate.md  2026-05-02-p58-evaluator-api-evidence-gate.md  2026-05-02-p59-research-adapter-ingestion-contract.md  2026-05-05-p60-mcp-phase3-runtime-surface.md
specs/: p52-phase-3-intake-roadmap.spec.md  p53-phase-3-candidate-evidence-audit.spec.md  p54-runtime-adoption-evidence.spec.md  p55-runtime-adoption-cli.spec.md  p56-card-context-default-gate.spec.md  p57-card-embedding-evidence-gate.spec.md  p58-evaluator-api-evidence-gate.spec.md  p59-research-adapter-ingestion-contract.spec.md  p60-mcp-phase3-runtime-surface.spec.md
src/: main.rs
src/core/: config.rs  db.rs  protocol.rs  types.rs
src/cowork/: inbox.rs
src/embed/: onnx.rs
src/factcheck/: mod.rs  names.rs
src/mcp/: mod.rs  server.rs  tools.rs
tests/: context_assembler.rs  knowledge_card_schema.rs  mind_model_bootstrap.rs  normalize_version.rs  phase3_runtime.rs  search_neighbors.rs  tunnels_explicit.rs
